// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography exo Colors should render black exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: black;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Colors should render blue exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #1ea7fd;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Colors should render gray exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #999999;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Colors should render green exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #90ee7e;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Colors should render red exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #ff0066;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Colors should render white exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: white;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render black large exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: black;
}

<div
  className="c0"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render black normal exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: black;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render blue large exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: #1ea7fd;
}

<div
  className="c0"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render blue normal exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #1ea7fd;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render gray large exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: #999999;
}

<div
  className="c0"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render gray normal exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #999999;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render green large exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: #90ee7e;
}

<div
  className="c0"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render green normal exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #90ee7e;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render red large exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: #ff0066;
}

<div
  className="c0"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render red normal exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #ff0066;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render white large exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: white;
}

<div
  className="c0"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography exo Sizes & Colors combinations should render white normal exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: white;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo Sizes should render large open sans font 1`] = `
.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 40px;
  color: unset;
}

<div
  className="c0"
  fontFamily="openSans"
  size="large"
>
  Test
</div>
`;

exports[`Typography exo Sizes should render normal open sans font 1`] = `
.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: unset;
}

<div
  className="c0"
  fontFamily="openSans"
  size="normal"
>
  Test
</div>
`;

exports[`Typography exo should render font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: unset;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Colors should render black exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: black;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Colors should render blue exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #1ea7fd;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Colors should render gray exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #999999;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Colors should render green exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #90ee7e;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Colors should render red exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #ff0066;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Colors should render white exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: white;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render black large exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: black;
}

<div
  className="c0"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render black normal exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: black;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render blue large exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: #1ea7fd;
}

<div
  className="c0"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render blue normal exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #1ea7fd;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render gray large exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: #999999;
}

<div
  className="c0"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render gray normal exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #999999;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render green large exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: #90ee7e;
}

<div
  className="c0"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render green normal exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #90ee7e;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render red large exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: #ff0066;
}

<div
  className="c0"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render red normal exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: #ff0066;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render white large exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 40px;
  color: white;
}

<div
  className="c0"
  fontFamily="exo"
  size="large"
>
  Test
</div>
`;

exports[`Typography openSans Sizes & Colors combinations should render white normal exo font 1`] = `
.c0 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: white;
}

<div
  className="c0"
  fontFamily="exo"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans Sizes should render large open sans font 1`] = `
.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 40px;
  color: unset;
}

<div
  className="c0"
  fontFamily="openSans"
  size="large"
>
  Test
</div>
`;

exports[`Typography openSans Sizes should render normal open sans font 1`] = `
.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: unset;
}

<div
  className="c0"
  fontFamily="openSans"
  size="normal"
>
  Test
</div>
`;

exports[`Typography openSans should render font 1`] = `
.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: unset;
}

<div
  className="c0"
  fontFamily="openSans"
  size="normal"
>
  Test
</div>
`;

exports[`Typography should render 1`] = `
.c0 {
  font-family: unset;
  font-size: 16px;
  color: unset;
}

<div
  className="c0"
  fontFamily={null}
  size="normal"
>
  Test
</div>
`;
